--- a/Frontend/src/app/admin/admin.component.html
+++ b/Frontend/src/app/admin/admin.component.html
@@ -1,4 +1,4 @@
-<mat-drawer-container>
+<mat-drawer-container autosize style="position: absolute;right: 0px;left: 0px;bottom: 0px;top: 0px;">
 
   <mat-drawer mode="side" [opened]="sideBarOpen">
     <app-admin-sidenav></app-admin-sidenav>
@@ -6,7 +6,7 @@
 
   <mat-drawer-content>
       <app-admin-header (toggleSidebarForMe)="sideBarToggler()"></app-admin-header>
-      <router-outlet></router-outlet>
+      <main><router-outlet></router-outlet></main>
   </mat-drawer-content>
 
 </mat-drawer-container>
