--- a/Frontend/src/app/admin/admin.component.html
+++ b/Frontend/src/app/admin/admin.component.html
@@ -6,7 +6,7 @@
 
   <mat-drawer-content>
       <app-admin-header (toggleSidebarForMe)="sideBarToggler()"></app-admin-header>
-      <main><router-outlet></router-outlet></main>
+      <router-outlet></router-outlet>
   </mat-drawer-content>
 
 </mat-drawer-container>
