--- a/Frontend/src/app/mailbox/mailbox.component.html
+++ b/Frontend/src/app/mailbox/mailbox.component.html
@@ -1,3 +1,4 @@
+
 <div class="container-fluid page">
     <div class="d-flex page__box p-3 mt-2">Inbox</div>
     <div class="page__content shadow p-3 position-relative">
@@ -9,29 +10,48 @@
                 <th scope="col">User Name</th>
                 <th scope="col">Email Id</th>
                 <th scope="col">Message</th>
+                <th scope="col"></th>
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-              </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
+              <tr *ngFor="let i of contact;let j=index">
+                <th scope="row">{{j+1}}</th>
+                <td>{{i.fname}} {{i.lname}}</td>
+                <td>{{i.email}}</td>
+                <td>{{i.comment}}</td>
+                <td>
+                  <button type="button" class="btn btn-outline-warning" data-toggle="modal" data-target="#exampleModa">Reply</button>
+                </td>
               </tr>
             </tbody>
           </table>
       <!-- </div> -->
     </div>
   </div>
+
+
+
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Launch demo modal
+</button>
+
+<!-- Modal -->
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
