--- a/Frontend/src/app/mailbox/mailbox.component.html
+++ b/Frontend/src/app/mailbox/mailbox.component.html
@@ -20,7 +20,7 @@
                 <td>{{i.email}}</td>
                 <td>{{i.comment}}</td>
                 <td>
-                  <button type="button" class="btn btn-outline-warning" data-toggle="modal" data-target="#exampleModa">Reply</button>
+                  <button type="button" class="btn btn-outline-warning" (click)="open(content,i)">Reply</button>
                 </td>
               </tr>
             </tbody>
@@ -29,29 +29,33 @@
     </div>
   </div>
 
-
-
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
-</button>
-
-<!-- Modal -->
-
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
+    <div class="modal">
+  <ng-template #content let-c="close" let-d="dismiss" >
+    
+    
+    <div class="modal-header card-header" style="border-radius: 10px;">
+      <h4 class="modal-title">Send Mail..</h4>
+        <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+          <span aria-hidden="true">&times;</span>
+        </button>
+    
+   </div>
       <div class="modal-body">
-        ...
+        <form (ngSubmit)="messageback()">
+          <div class="form-group">
+            <label for="exampleFormControlInput1">Email address</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" name="email" [(ngModel)]="sendemail.email">
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlTextarea1">Message</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="mess" [(ngModel)]="sendemail.mess"></textarea>
+          </div>
+          <button style="float: right;" type="submit" (click)="d('Cross click')" class="btn btn-outline-success">Send
+          </button>
+        </form>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
+  
+  </ng-template>
 </div>
+  
+  
