--- a/Frontend/src/app/selection/selection.component.html
+++ b/Frontend/src/app/selection/selection.component.html
@@ -1,4 +1,112 @@
-<div class="control-group">
+<section class="policy">
+    <div class="containers text-center">
+      <div class="row">
+  
+        <div class="col-md-4">
+          <div class="policy-card">
+            <div class="round">
+              <div class="round-icon">
+                <i class="fas fa-mouse-pointer"></i>
+              </div>
+            </div>
+            <h2>Choose Your Template</h2>
+            <p>A career diplomat knows what information should be given and which to hold back. </p>
+       </div>
+      </div>
+  
+      <div class="col-md-4">
+        <div class="policy-card">
+          <div class="round">
+            <div class="round-icon">
+              <i class="fas fa-clipboard-list"></i>
+            </div>
+          </div>
+          <h2>Add Info</h2>
+          <p>Complement Your Resume With a Cover Letter </p>
+     </div>
+    </div>
+  
+    <div class="col-md-4">
+      <div class="policy-card">
+        <div class="round">
+          <div class="round-icon">
+            <i class="far fa-save"></i>
+          </div>
+        </div>
+        <h2>Save Your Template</h2>
+        <p>Proofread, Save & Email Your Resume the Right Way</p>
+   </div>
+  </div>
+  
+  
+    </div>
+  
+    </div>
+  </section>
+  
+  
+  <section class="policy-product">
+    <div class="containers">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="policy-p-card">
+                <div class=date>
+                  <h3>01</h3>
+                  <h4>Template 1</h4>
+                </div>
+                    <div class="policy-image">
+                      <img src="https://www.resumonk.com/assets/template-thumbnails/elemental-9a290f22da422ad3ea13363a7b2daff2857371ee649115e5e28f4a4414c640a4.jpg" alt="Template1">
+                    </div>
+                    <button type="button" (click)="temp1()">Select Template</button>
+                    <h2>The chronological resume format.</h2>
+                    <p>The chronological resume is a traditional resume format which emphasizes your duties, experience, and work history. You'll list your most recent positions first, and go back through past jobs in reverse-chronological order from there. As the standard, basic resume format, it tends to be the easiest to read and scan.</p>
+                    <a (click)="generatelink()" class="read-more">Choose<i class="fa fa-caret-right"></i></a>              
+            </div>          
+          </div>
+  
+        <div class="col-md-4">
+          <div class="policy-p-card">
+            <div class=date>
+              <h3>02</h3>
+              <h4>Template 2</h4>
+            </div>
+                <div class="policy-image">
+                  <img src="https://www.resumonk.com/assets/template-thumbnails/elemental-9a290f22da422ad3ea13363a7b2daff2857371ee649115e5e28f4a4414c640a4.jpg" alt="Template1">
+                </div>
+                <button type="button" (click)="temp2()">Select Template</button>
+                <h2>The chronological resume format.</h2>
+                <p>The chronological resume is a traditional resume format which emphasizes your duties, experience, and work history. You'll list your most recent positions first, and go back through past jobs in reverse-chronological order from there. As the standard, basic resume format, it tends to be the easiest to read and scan.</p>
+                <a href="" class="read-more">Choose<i class="fa fa-caret-right"></i></a>              
+        </div> 
+        </div>
+  
+        <div class="col-md-4">
+          <div class="policy-p-card">
+            <div class=date>
+              <h3>03</h3>
+              <h4>Template 3</h4>
+            </div>
+                <div class="policy-image">
+                  <img src="https://www.resumonk.com/assets/template-thumbnails/elemental-9a290f22da422ad3ea13363a7b2daff2857371ee649115e5e28f4a4414c640a4.jpg" alt="Template1">
+                </div>
+                <button type="button" (click)="temp3()">Select Template</button>
+                <h2>The chronological resume format.</h2>
+                <p>The chronological resume is a traditional resume format which emphasizes your duties, experience, and work history. You'll list your most recent positions first, and go back through past jobs in reverse-chronological order from there. As the standard, basic resume format, it tends to be the easiest to read and scan.</p>
+                <a  href="" class="read-more">Choose<i class="fa fa-caret-right"></i></a>              
+        </div> 
+        </div>
+  
+      </div>
+    </div>
+  </section>
+
+
+
+
+
+
+
+<!-- <div class="control-group">
     <label class="control-label" for="choose">Backup Your CV</label>
     <select class="control-label" placeholder="Degree" name="draft" [(ngModel)]="draftID">
               <option value="select">select</option>
@@ -27,4 +135,7 @@
               </li> 
         </ul>
     </div>
-  </div>
+  </div> -->
+
+
+  
