--- a/Frontend/src/app/updateform4/updateform4.component.html
+++ b/Frontend/src/app/updateform4/updateform4.component.html
@@ -1,88 +1,71 @@
-<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
-
 <div class="container">
-	<div class="row">
-	<form class="form-horizontal" (ngSubmit)="updatedata4()">
-<fieldset>
-
-<!-- Form Name -->
-<legend> Skills</legend>
-
-<!--Button -->
-
-<!-- Text input-->
-<div *ngFor="let i of http.Updatedata.skills;let j=index">
-<div class="control-group">
-  <label class="control-label" for="skills">
-    Skills
-  </label>
-  <div class="controls">
-    <input  type="text" placeholder="Enter Skills" class="input-xlarge" type="text" name="skill{{j}}" [(ngModel)]="i.skill">
-    <button class="btn btn-danger" type="button" (click)="del(i)">Remove</button>
-
-  </div>
-</div>
-</div>
-
-
-<div class="control-group">
-    <label class="control-label" for="submit"></label>
-    <div class="controls">
-      <button id="submit" name="submit" class="btn btn-primary" type="button" (click)="insert()">ADD</button>
-    </div>
-  </div>
-
-
-  <legend>Other Details</legend>
-
-<!-- Text input-->
-<div class="control-group">
-  <label class="control-label" for="full_name">Achievements</label>
-  <div class="controls">
-    <input id="full_name" name="full_name" placeholder="Enter your Achievements" class="input-xlarge" type="text" [(ngModel)]="http.Updatedata.achievements">
+  <div class="title">Skill Set</div>
+  
+  <div class="content">
+    <form action="#" (ngSubmit)="updatedata4()">
+          
+        
+      <div class="user-details">
+           
+        <div class="input-box">
+         <span class="details">Skill</span>
+         <div *ngFor="let i of http.Updatedata.skills;let j=index"> 
+         <input type="text"  placeholder="Enter your skill" name="skill{{j}}"  [(ngModel)]="i.skill" required>
+       
+         <div class="buttoner">
+         <input type="button" value="Delete" (click)="del(i)"> 
+          </div>
+       </div>  
+       <div class="buttoned">
+         <input type="button" value="Add" (click)="insert()"> 
+        </div>         
+     </div>
       </div>
-</div>
+     <div class="user-details">
+           
+      <div class="input-box">
+       <span class="details"> Language Skill</span>
+       <div *ngFor="let i of http.Updatedata.languages;let j=index"> 
+       <input type="text"  placeholder="Enter your Language" name="lang{{j}}"  [(ngModel)]="i.language" required>
+     
+     <div class="buttoner">
+       <input type="button" value="Delete" (click)="del2(i)"> 
+        </div>
+     </div>  
+     <div class="buttoned">
+       <input type="button" value="Add" (click)="insert2()"> 
+      </div>         
+   </div>
+                          
 
+     
+        
+          
+          </div>
+          <div class="title">Other Details</div>
+          <div class="user-details">
+           
+            <div class="input-box">
+             
+             <span class="details">Achievements</span>
+             <input type="text" name="full_name" placeholder="Enter your Achievements" [(ngModel)]="http.Updatedata.achievements"required>
+           
+                  
+         </div>
+          </div>
+         
+           
 
-<!-- Text input-->
-<div *ngFor="let i of http.Updatedata.languages;let j=index">
-<div class="control-group">
-  <label class="control-label" for="lang">Known Languages</label>
-  <div class="controls">                     
-    
-    <input type="text" id="lang" name="lang{{j}}"placeholder="Enter your knwon languages" [(ngModel)]="i.language">
-    <button class="btn btn-danger" type="button" (click)="del2(i)">Remove</button>
-  </div>
-</div>
-</div>
-
-<div class="control-group">
-    <label class="control-label" for="submit"></label>
-    <div class="controls">
-      <button id="submit" name="submit" class="btn btn-primary" type="button" (click)="insert2()">ADD</button>
+           
+            
+           
+           
+          <div class="button">
+            <div><input type="submit" value="Next Page"></div>
+            <div><input type="button" value="Back Page" ><a routerLink="form3"></a></div> 
+            
+          </div>
+        
+        </form>
+      </div>
     </div>
-  </div>
-
-
-
-
-
-
-
-
-
-<!-- Button -->
-<div class="control-group">
-  <label class="control-label" for="submit"></label>
-  <div class="controls">
-    <button id="submit" name="submit" class="btn btn-primary" type="submit">Submit</button>
-  </div>
-</div>
-
-</fieldset>
-</form>
-</div>
-
