--- a/Frontend/src/app/usermanager/usermanager.component.html
+++ b/Frontend/src/app/usermanager/usermanager.component.html
@@ -21,7 +21,7 @@
                 <td>{{i.username}}</td>
                 <td>{{i.email}}</td>
                 <td>{{i.phonenumber}}</td>
-                <td>{{i.star}}</td>
+                <td>{{i.star}}/5</td>
                 <td>
                   <button type="button" class="btn btn-outline-danger" (click)="delete(i)">Delete</button>
                 </td>
