--- a/Frontend/src/app/form5/form5.component.html
+++ b/Frontend/src/app/form5/form5.component.html
@@ -1,35 +1,42 @@
+<form  (ngSubmit)="resumedata5()">
+	<div>
+		<h2 class="style2">Upload Image & Video </h2>
+			  </div>
+<div class="frame">
+	<div class="center">
+		<div class="title">
+			<h1>Drop Image to upload</h1>
+		</div>
 
-<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
+		<div class="dropzone">
+			<img src="http://100dayscss.com/codepen/upload.svg" class="upload-icon" />
+			<input id="photo" name="image" class="input-file" type="file" multiple (change)="selectImage($event)" />
+		</div>
 
-<div class="container">
-	<div class="row">
-	<form class="form-horizontal" (ngSubmit)="resumedata5()">
-<fieldset>
-
-<!-- File Button --> 
-<div class="control-group">
-  <label class="control-label" for="photo">Photo</label>
-  <div class="controls">
-    <input id="photo" name="image" class="input-file" type="file" multiple (change)="selectImage($event)">
-    <button id="submit" name="submit" type="button" class="btn btn-primary" (click)=upload()>upload image</button>
-  </div>
-</div>
-
-
-
-<!-- Button -->
-<div class="control-group">
-  <label class="control-label" for="submit"></label>
-  <div class="controls">
-    <button id="submit" name="submit" class="btn btn-primary" type="submit">Select Template</button>
-  </div>
-</div>
-
-</fieldset>
-</form>
+		<button type="submit" class="btn" name="submit" (click)=upload()>Upload file</button>
 
 	</div>
+  
 </div>
+
+
+<div class="framed">
+	<div class="centers">
+		<div class="title">
+			<h1>Drop Video to upload</h1>
+		</div>
+
+		<div class="dropzone">
+			<img src="http://100dayscss.com/codepen/upload.svg" class="upload-icon" />
+			<input id="photo" name="image" class="input-file" type="file" multiple (change)="selectImage($event)" />
+		</div>
+
+		<button type="submit" class="btn" name="submit" (click)=upload()>Upload file</button>
+
+	</div>
+  
+</div>
+</form>
+
+
+
