--- a/Frontend/src/app/login/login.component.css
+++ b/Frontend/src/app/login/login.component.css
@@ -1,84 +1,26 @@
-body {
-	color: #999;
-	background: #f5f5f5;
-	font-family: 'Varela Round', sans-serif;
+@import url("//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css");
+.login-block{
+    background: #DE6262;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to bottom, #FFB88C, #DE6262);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to bottom, #FFB88C, #DE6262); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+float:left;
+width:100%;
+padding : 50px 0;
 }
-.form-control {
-	box-shadow: none;
-	border-color: #ddd;
-}
-.form-control:focus {
-	border-color: #4aba70; 
-}
-.login-form {
-	width: 350px;
-	margin: 0 auto;
-	padding: 30px 0;
-}
-.login-form form {
-	color: #434343;
-	border-radius: 1px;
-	margin-bottom: 15px;
-	background: #fff;
-	border: 1px solid #f3f3f3;
-	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-	padding: 30px;
-}
-.login-form h4 {
-	text-align: center;
-	font-size: 22px;
-	margin-bottom: 20px;
-}
-.login-form .avatar {
-	color: #fff;
-	margin: 0 auto 30px;
-	text-align: center;
-	width: 100px;
-	height: 100px;
-	border-radius: 50%;
-	z-index: 9;
-	background: #4aba70;
-	padding: 15px;
-	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
-}
-.login-form .avatar i {
-	font-size: 62px;
-}
-.login-form .form-group {
-	margin-bottom: 20px;
-}
-.login-form .form-control, .login-form .btn {
-	min-height: 40px;
-	border-radius: 2px; 
-	transition: all 0.5s;
-}
-.login-form .close {
-	position: absolute;
-	top: 15px;
-	right: 15px;
-}
-.login-form .btn, .login-form .btn:active {
-	background: #4aba70 !important;
-	border: none;
-	line-height: normal;
-}
-.login-form .btn:hover, .login-form .btn:focus {
-	background: #42ae68 !important;
-}
-.login-form .checkbox-inline {
-	float: left;
-}
-.login-form input[type="checkbox"] {
-	position: relative;
-	top: 2px;
-}
-.login-form .forgot-link {
-	float: right;
-}
-.login-form .small {
-	font-size: 13px;
-}
-.login-form a {
-	color: #4aba70;
-}
+.banner-sec{background:url(https://static.pexels.com/photos/33972/pexels-photo.jpg)  no-repeat left bottom; background-size:cover; min-height:500px; border-radius: 0 10px 10px 0; padding:0;}
+.container{background:#fff; border-radius: 10px; box-shadow:15px 20px 0px rgba(0,0,0,0.1);}
+.carousel-inner{border-radius:0 10px 10px 0;}
+.carousel-caption{text-align:left; left:5%;}
+.login-sec{padding: 50px 30px; position:relative;}
+.login-sec .copy-text{position:absolute; width:80%; bottom:20px; font-size:13px; text-align:center;}
+.login-sec .copy-text i{color:#FEB58A;}
+.login-sec .copy-text a{color:#E36262;}
+.login-sec h2{margin-bottom:30px; font-weight:800; font-size:30px; color: #DE6262;}
+.login-sec h2:after{content:" "; width:100px; height:5px; background:#FEB58A; display:block; margin-top:20px; border-radius:3px; margin-left:auto;margin-right:auto}
+.btn-login{background: #DE6262; color:#fff; font-weight:600;}
+.banner-text{width:70%; position:absolute; bottom:40px; padding-left:20px;}
+.banner-text h2{color:black; font-weight:600;}
+.banner-text h2:after{content:" "; width:100px; height:5px; background:black; display:block; margin-top:20px; border-radius:3px;}
+.banner-text p{color:black;}
+
 
