--- a/Frontend/src/app/signup/signup.component.css
+++ b/Frontend/src/app/signup/signup.component.css
@@ -1,93 +1,101 @@
-body {
-	color: #fff;
-	background: #63738a;
-	font-family: 'Roboto', sans-serif;
+.register-photo {
+	background: linear-gradient(to bottom, #FFB88C, #DE6262);
+    padding: 40px ;
+	
+	
+	
 }
-.form-control {
-	height: 40px;
-	box-shadow: none;
-	color: #969fa4;
+
+.register-photo .image-holder {
+    display: table-cell;
+    width: auto;
+    background: url(https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fspecials-images.forbesimg.com%2Fimageserve%2F5d7d5cf17a8707000830f341%2FResume-development%2F960x0.jpg%3Ffit%3Dscale);
+    background-size: cover;
+	border-top-left-radius: 20px;
+	border-bottom-left-radius: 20px;
+	
 }
-.form-control:focus {
-	border-color: #5cb85c;
+
+.register-photo .form-container {
+    display: table;
+    
+    width: 100%;
+    margin: 0 auto;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+	
+	
 }
-.form-control, .btn {        
-	border-radius: 3px;
+
+.register-photo form {
+    display: table-cell;
+    width: 400px;
+    background-color: #ffffff;
+    padding: 40px 60px;
+    color: #505e6c;
+	border-top-right-radius: 20px;
+	border-bottom-right-radius: 20px;
+	
 }
-.signup-form {
-	width: 450px;
-	margin: 0 auto;
-	padding: 30px 0;
-  	font-size: 15px;
+
+@media (max-width:991px) {
+    .register-photo form {
+        padding: 40px
+    }
 }
-.signup-form h2 {
-	color: #636363;
-	margin: 0 0 15px;
-	position: relative;
-	text-align: center;
+
+.register-photo form h2 {
+    font-size: 24px;
+    line-height: 1.5;
+    margin-bottom: 30px
 }
-.signup-form h2:before, .signup-form h2:after {
-	content: "";
-	height: 2px;
-	width: 30%;
-	background: #d4d4d4;
-	position: absolute;
-	top: 50%;
-	z-index: 2;
-}	
-.signup-form h2:before {
-	left: 0;
+
+.register-photo form .form-control {
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid #dfe7f1;
+    border-radius: 0;
+    box-shadow: none;
+    outline: none;
+    color: inherit;
+    text-indent: 0px;
+    height: 40px
 }
-.signup-form h2:after {
-	right: 0;
+
+.register-photo form .form-check {
+    font-size: 13px;
+    line-height: 20px
 }
-.signup-form .hint-text {
-	color: #999;
-	margin-bottom: 30px;
-	text-align: center;
+
+.register-photo form .btn-primary {
+    background: green;
+    border: none;
+    border-radius: 4px;
+    padding: 11px;
+    box-shadow: none;
+    margin-top: 35px;
+    text-shadow: none;
+    outline: none !important
 }
-.signup-form form {
-	color: #999;
-	border-radius: 3px;
-	margin-bottom: 15px;
-	background: #f2f3f7;
-	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-	padding: 30px;
+
+.register-photo form .btn-primary:hover,
+.register-photo form .btn-primary:active {
+    background: green
 }
-.signup-form .form-group {
-	margin-bottom: 20px;
+
+.register-photo form .btn-primary:active {
+    transform: translateY(1px)
 }
-.signup-form input[type="checkbox"] {
-	margin-top: 3px;
-}
-.signup-form .btn {        
-	font-size: 16px;
-	font-weight: bold;		
-	min-width: 140px;
-	outline: none !important;
-}
-.signup-form .row div:first-child {
-	padding-right: 10px;
-}
-.signup-form .row div:last-child {
-	padding-left: 10px;
-}    	
-.signup-form a {
-	color: #fff;
-	text-decoration: underline;
-}
-.signup-form a:hover {
-	text-decoration: none;
-}
-.signup-form form a {
-	color: #5cb85c;
-	text-decoration: none;
-}	
-.signup-form form a:hover {
-	text-decoration: underline;
-}
+
+.register-photo form .already {
+    display: block;
+    text-align: center;
+    font-size: 12px;
+    color: #6f7a85;
+    opacity: 0.9;
+    text-decoration: none
+} 
 .smal{
-	font-size:9.5px;
+	font-size:7.38px;
 	color: red;
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
