--- a/Frontend/src/app/signup/signup.component.html
+++ b/Frontend/src/app/signup/signup.component.html
@@ -1,4 +1,74 @@
+<div class="register-photo">
+    <div class="form-container">
+        <div class="image-holder"></div>
+        <form method="post" (ngSubmit)="signupUser()" #userSignup="ngForm">
+            <h2 class="text-center"><strong>Create</strong> an account.</h2>
+            <div class="form-group">
+                <input class="form-control" required="required" [(ngModel)]="user.username" type="text" name="First Name" placeholder="First Name">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="text" name="Last Name" placeholder="Last Name">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="email" #email="ngModel" name="email" placeholder="Email"  [(ngModel)]="user.email"  pattern="^[a-zA-Z0-9.%+]+@[a-zA-Z0-9.-]+\.[a-z]{2,4}" required>
+                 
+                <!-- Email Error Display Starts -->
+            <div *ngIf="email.invalid && (email.dirty || email.touched)"
+            class="smal">
 
+            <div *ngIf="email.errors.required">
+            Email is required.
+            </div>
+            <div *ngIf="email.errors.pattern">
+            Not a valid Format.
+            </div>
+           </div>
+           <!-- Email Error Display Ends -->
+            
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="password"  name="password" placeholder="Password" #password="ngModel" pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-]).{4,}$" [(ngModel)]="user.password" required minlength="8">
+                <!-- Password Error Display Starts -->
+            <div *ngIf="password.invalid && (password.dirty || password.touched)"
+            class="smal">
+
+            <div *ngIf="password.errors.required">
+            Password is required.
+            </div>
+            <div *ngIf="password.errors.pattern||password.errors.minlength">
+                Minimum 8 length, 1 uppercase, 1 lowercase, 1 number & 1 special character.
+                </div>
+
+            </div>
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="number" placeholder="Your Mobile No." 
+                [(ngModel)]="user.mobileno" #mobileno="ngModel" name="mobileno"
+                required minlength="10" pattern="([0-9]{10})">
+                <div *ngIf="mobileno.invalid && (mobileno.dirty || mobileno.touched)"
+                class="smal">
+
+                <div *ngIf="mobileno.errors.required">
+                Mobile No. is required.
+                </div>
+                <div *ngIf="mobileno.errors.minlength||mobileno.errors.pattern">
+                    Mobile No. must be of 10 digits.
+                    </div>
+               </div>
+               <!-- Mobile No Error Display Ends -->
+
+            </div>
+            <div class="form-group">
+                <div class="form-check"><label class="form-check-label"><input class="form-check-input" type="checkbox">I agree to the license terms.</label></div>
+            </div>
+            <div class="form-group"><button class="btn btn-success btn-block" type="submit" [disabled]="userSignup.form.invalid">Sign Up</button></div>
+        </form>
+    </div>
+</div>
+
+
+
+<!-- 
 <div class="signup-form">
     <form action="/examples/actions/confirmation.php" (ngSubmit)="signupUser()" #userSignup="ngForm">
 		<h2>Register</h2>
@@ -11,7 +81,7 @@
         </div>
         <div class="form-group">
         	<input type="email" class="form-control" #email="ngModel" name="email" placeholder="Email"  [(ngModel)]="user.email"  pattern="^[a-zA-Z0-9.%+]+@[a-zA-Z0-9.-]+\.[a-z]{2,4}" required>
-            <!-- Email Error Display Starts -->
+           
             <div *ngIf="email.invalid && (email.dirty || email.touched)"
             class="smal">
 
@@ -22,11 +92,11 @@
             Not a valid Format.
             </div>
            </div>
-           <!-- Email Error Display Ends -->
+         
         </div>
 		<div class="form-group">
             <input type="password" class="form-control" name="password" placeholder="Password" #password="ngModel" pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-]).{4,}$" [(ngModel)]="user.password" required minlength="8">
-            <!-- Password Error Display Starts -->
+           
             <div *ngIf="password.invalid && (password.dirty || password.touched)"
             class="smal">
 
@@ -46,7 +116,7 @@
                           <input id="MobNo" type="number" class="form-control" placeholder="Your Mobile No." 
                           [(ngModel)]="user.mobileno" #mobileno="ngModel" name="mobileno"
                           required minlength="10" pattern="([0-9]{10})">
-                          <!-- Mobile No Error Display Starts -->
+                       
                           <div *ngIf="mobileno.invalid && (mobileno.dirty || mobileno.touched)"
                           class="smal">
 
@@ -58,7 +128,7 @@
                           </div>
                           
                          </div>
-                         <!-- Mobile No Error Display Ends -->
+                        
                         </div>
                     </div>
               
@@ -69,4 +139,4 @@
             <button type="submit"[disabled]="userSignup.form.invalid" class="btn btn-success btn-lg btn-block" >Register Now</button>
         </div>
     </form>
-</div>
+</div> -->
