--- a/Frontend/src/app/updateform2/updateform2.component.html
+++ b/Frontend/src/app/updateform2/updateform2.component.html
@@ -1,70 +1,52 @@
-<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
-
 <div class="container">
-	<div class="row">
-	<form class="form-horizontal" (ngSubmit)="updatedata2()">
+  <div class="title">Education Details</div>
+  <br>
+  <div class="content">
+    <form action="#" (ngSubmit)="updatedata2()">
+      
+      <div *ngFor="let i of http.Updatedata.education;let j=index">
+        <div class="user-details">
+          <div class="input-box">
+            <label   class="details" for="choose">Choose Degree</label>
+         <select  placeholder="Degree" name="degree{{j}}" [(ngModel)]="i.degree">
+           <option>Bachelor’s Degree</option>
+           <option>Master’s Degree</option>
+           <option>Doctoral Degree</option>
+         </select>
+                    
+           </div>
+           <div class="input-box">
+            <span class="details">Specialisation</span>
+            <input type="text" name="mobile{{j}}" placeholder="Enter your Specialisation" [(ngModel)]="i.specialisation"required>
+          </div>
 
+          <div class="input-box">
+            <span class="details">Passout Year</span>
+            <input type="number" name="yaer{{j}}" placeholder="Enter your Passout Year" [(ngModel)]="i.year" required>
+          </div>
 
-<!-- Form Name -->
-<legend>Education Details</legend>
-<div *ngFor="let i of http.Updatedata.education;let j=index">
-<div class="control-group">
-  <label class="control-label" for="choose">Choose A Degree</label>
-  <select class="control-label" placeholder="Degree" name="degree{{j}}" [(ngModel)]="i.degree">
-    <option>Bachelor’s Degree</option>
-    <option>Master’s Degree</option>
-    <option>Doctoral Degree</option>
-  </select>
+          <div class="input-box">
+            <span class="details">Institution Name</span>
+            <input type="text"name="mobile" placeholder="Enter your Institution" [(ngModel)]="i.name"  name="name{{j}}" required>
+          </div>
+        </div>
+
+          <div class="buttoner">
+            <input type="button" value="Delete" (click)="del(i)"> 
+         </div>
+             
+                     
+          </div>  
+       
+          <div class="buttoned">
+            <input type="button" value="Add" (click)="insert()"> 
+           </div>
+       
+          <div class="button">
+            <input type="submit" value="Next Page"> 
+          </div>
+        
+        </form>
+      </div>
     </div>
-<!-- Text input-->
-<div class="control-group">
-  <label class="control-label" for="mobile">Specialisation</label>
-  <div class="controls">
-    <input id="mobile" name="mobile{{j}}" placeholder="Enter Your Degree Name" class="input-xlarge" type="text" [(ngModel)]="i.specialisation">
-    
-  </div>
-</div>
-<!-- Text input-->
-<div class="control-group">
-  <label class="control-label" for="mobile">Passout Year</label>
-  <div class="controls">
-    <input  type="number" name="year{{j}}"placeholder="Enter Passout Year" class="input-xlarge" type="text" [(ngModel)]="i.year">
-    
-  </div>
-</div>
-
-<!-- Text input-->
-<div class="control-group">
-  <label class="control-label" for="mobile">Institution Name</label>
-  <div class="controls">
-    <input id="college"  placeholder="Enter College/University" class="input-xlarge" type="text" name="name{{j}}" [(ngModel)]="i.name">
-    <button class="btn btn-danger" type="button" (click)="del(i)">Remove</button>
-    
-  </div>
-</div>
-</div>
-
-<!-- Button -->
-<div class="control-group">
-  <label class="control-label" for="submit"></label>
-  <div class="controls">
-    <button id="submit" name="submit" class="btn btn-primary" type="button" (click)="insert()">ADD More</button>
-  </div>
-</div>
-
-
-<!-- Button -->
-<div class="control-group">
-  <label class="control-label" for="submit"></label>
-  <div class="controls">
-    <button id="submit" name="submit" class="btn btn-primary">Next</button>
-  </div>
-</div>
-
-
-</form>
-	</div>
-</div>
+  
