--- a/Frontend/src/app/admin-sidenav/admin-sidenav.component.css
+++ b/Frontend/src/app/admin-sidenav/admin-sidenav.component.css
@@ -55,3 +55,10 @@
     font-weight: 100;
     letter-spacing: 1px;
 }
+a.dis{
+    pointer-events: none;
+    cursor: default;
+    background-color: transparent;
+    color: gray;
+    
+  }
