--- a/Frontend/src/app/form1/form1.component.css
+++ b/Frontend/src/app/form1/form1.component.css
@@ -105,8 +105,10 @@ form .input-box span.details{
    margin: 35px 0
  }
  form .button input{
+   float: right;
    height: 100%;
-   width: 50%;
+   width: 20%;
+  
    border-radius: 5px;
    border: none;
    color: #fff;
@@ -115,7 +117,7 @@ form .input-box span.details{
    letter-spacing: 1px;
    cursor: pointer;
    transition: all 0.3s ease;
-   background: linear-gradient(135deg, #71b7e6, #9b59b6);
+   background: linear-gradient(135deg, #1d76b1, #c2c2c7);
  }
  form .buttons input{
     height: 100%;
@@ -131,8 +133,8 @@ form .input-box span.details{
     background: linear-gradient(135deg, #71b7e6, #9b59b6);
   }
  form .button input:hover{
-  /* transform: scale(0.99); */
-  background: linear-gradient(-135deg, #71b7e6, #9b59b6);
+  transform: scale(0.99);
+  background: linear-gradient(-135deg, #c2c2c7,#1d76b1);
   }
  @media(max-width: 584px){
  .container{
