--- a/Frontend/src/app/form4/form4.component.css
+++ b/Frontend/src/app/form4/form4.component.css
@@ -14,8 +14,9 @@ body{
   background: linear-gradient(135deg, #71b7e6, #9b59b6);
 }
 .container{
-   /* max-width: 700px; 
-   width: 100%;   */
+   /* max-width: 700px; */
+  /* width: 100%;  */
+  min-height: 510px;
   background-color: #fff;
   padding: 25px 30px;
   border-radius: 5px;
@@ -46,17 +47,14 @@ form .user-details .input-box{
   margin-bottom: 15px;
   width: calc(100% / 2 - 20px);
 }
-/*for text area*/
-
-
 form .input-box span.details{
   display: block;
   font-weight: 500;
   margin-bottom: 5px;
 }
 .user-details .input-box input{
-  /* height: 45px;
-  width: 100%; */
+  
+ width: 120%;
   outline: none;
   font-size: 16px;
   border-radius: 5px;
@@ -69,6 +67,8 @@ form .input-box span.details{
 .user-details .input-box input:valid{
   border-color: #9b59b6;
 }
+
+
  form .gender-details .gender-title{
   font-size: 20px;
   font-weight: 500;
@@ -107,8 +107,10 @@ form .input-box span.details{
    margin: 35px 0
  }
  form .button input{
-   height: 100%;
-   width: 50%;
+  float: right;
+  height: 100%;
+  width: 20%;
+  margin-right: 25px;
    border-radius: 5px;
    border: none;
    color: #fff;
@@ -117,11 +119,11 @@ form .input-box span.details{
    letter-spacing: 1px;
    cursor: pointer;
    transition: all 0.3s ease;
-   background: linear-gradient(135deg, #71b7e6, #9b59b6);
+   background: linear-gradient(135deg, #1d76b1, #c2c2c7);
  }
  form .button input:hover{
-  /* transform: scale(0.99); */
-  background: linear-gradient(-135deg, #71b7e6, #9b59b6);
+  transform: scale(0.99);
+  background: linear-gradient(-135deg, #c2c2c7,#1d76b1);
   }
  @media(max-width: 584px){
  .container{
@@ -149,7 +151,7 @@ form .user-details .input-box{
 }
 form .buttoned input{
   height: 50%;
-  width: 20%;
+  width: 30%;
   border-radius: 1px;
   border: none;
   color: rgb(227, 216, 230);
@@ -166,7 +168,7 @@ form .buttoned input{
 }
 form .buttoner input{
   height: 50%;
-  width: 20%;
+  width: 30%;
   border-radius: 1px;
   border: none;
   color: rgb(227, 216, 230);
@@ -180,4 +182,11 @@ form .buttoner input{
   margin-right: 5px; */
   /* float:right; */
   
+}
+.inp{
+  margin-top: 5%;
+}
+.inp .input-box input{
+  width: 80%;
+  height: 2em;
 }
