--- a/Frontend/src/app/updateform2/updateform2.component.html
+++ b/Frontend/src/app/updateform2/updateform2.component.html
@@ -44,6 +44,7 @@
        
           <div class="button">
             <input type="submit" value="Next Page"> 
+            <a routerLink="/user/updateform1"><input type="button" value="Back Page"></a>
           </div>
         
         </form>
