--- a/Frontend/src/app/form2/form2.component.css
+++ b/Frontend/src/app/form2/form2.component.css
@@ -14,8 +14,7 @@ body{
   background: linear-gradient(135deg, #71b7e6, #9b59b6);
 }
 .container{
-   /* max-width: 700px; */
-  /* width: 100%;  */
+  min-height: 510px;
   background-color: #fff;
   padding: 25px 30px;
   border-radius: 5px;
@@ -104,8 +103,10 @@ form .input-box span.details{
    margin: 35px 0
  }
  form .button input{
-   height: 100%;
-   width: 50%;
+  float: right;
+  height: 100%;
+  width: 20%;
+  margin-right: 25px;
    border-radius: 5px;
    border: none;
    color: #fff;
@@ -114,11 +115,11 @@ form .input-box span.details{
    letter-spacing: 1px;
    cursor: pointer;
    transition: all 0.3s ease;
-   background: linear-gradient(135deg, #71b7e6, #9b59b6);
+   background: linear-gradient(135deg, #1d76b1, #c2c2c7);
  }
  form .button input:hover{
-  /* transform: scale(0.99); */
-  background: linear-gradient(-135deg, #71b7e6, #9b59b6);
+  transform: scale(0.99);
+  background: linear-gradient(-135deg, #c2c2c7,#1d76b1);
   }
  @media(max-width: 584px){
  .container{
@@ -177,4 +178,19 @@ form .buttoner input{
   margin-right: 5px; */
   /* float:right; */
   
+}
+.user-details .input-box select{
+  /* height: 45px;
+  width: 100%; */
+  outline: none;
+  font-size: 16px;
+  border-radius: 5px;
+  padding-left: 15px;
+  border: 1px solid #ccc;
+  border-bottom-width: 2px;
+  transition: all 0.3s ease;
+}
+.user-details .input-box option:focus,
+.user-details .input-box option:valid{
+  border-color: #9b59b6;
 }
