--- a/Frontend/src/app/form5/form5.component.css
+++ b/Frontend/src/app/form5/form5.component.css
@@ -1,13 +1,17 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:700,300);
-
+*{
+	padding: 0;
+	margin: 0;
+}
 .frame {
+	
+
 	position:absolute;
-	top: 50%;
-	left: 50%;
+
 	width: 400px;
 	height: 400px;
-	margin-top: -200px;
-	margin-left: -200px;
+	margin-top: 60px;
+	margin-left: -150px;
 	border-radius: 2px;
 	box-shadow: 4px 8px 16px 0 rgba(0, 0, 0, 0.1);
 	overflow: hidden;
@@ -16,13 +20,14 @@
 	font-family: "Open Sans", Helvetica, sans-serif;
 }
 .framed {
+	
+	
 	position:absolute;
-	top: 150%;
-	left: 50%;
+	margin-right: 2px;
 	width: 400px;
 	height: 400px;
-	margin-top: -200px;
-	margin-left: -200px;
+	margin-top: 60px;
+	margin-left: 30px;
 	border-radius: 2px;
 	box-shadow: 4px 8px 16px 0 rgba(0, 0, 0, 0.1);
 	overflow: hidden;
@@ -129,6 +134,7 @@ div {
 	float: left;
   }
   .style2 {
+	  margin-top: -25px;
 	padding-bottom: 4px;
   }
   .style21 {
