--- a/Frontend/src/app/selection/selection.component.html
+++ b/Frontend/src/app/selection/selection.component.html
@@ -60,7 +60,7 @@
                     <button type="button" (click)="temp1()">Select Template</button>
                     <h2>The chronological resume format.</h2>
                     <p>The chronological resume is a traditional resume format which emphasizes your duties, experience, and work history. You'll list your most recent positions first, and go back through past jobs in reverse-chronological order from there. As the standard, basic resume format, it tends to be the easiest to read and scan.</p>
-                    <a (click)="generatelink()" class="read-more">Choose<i class="fa fa-caret-right"></i></a>              
+                    <a type="button" (click)="generatelink('template1')" class="read-more">Choose<i class="fa fa-caret-right"></i></a>              
             </div>          
           </div>
   
@@ -76,7 +76,7 @@
                 <button type="button" (click)="temp2()">Select Template</button>
                 <h2>The chronological resume format.</h2>
                 <p>The chronological resume is a traditional resume format which emphasizes your duties, experience, and work history. You'll list your most recent positions first, and go back through past jobs in reverse-chronological order from there. As the standard, basic resume format, it tends to be the easiest to read and scan.</p>
-                <a href="" class="read-more">Choose<i class="fa fa-caret-right"></i></a>              
+                <a type="button" (click)="generatelink('template2')" class="read-more">Choose<i class="fa fa-caret-right"></i></a>              
         </div> 
         </div>
   
@@ -92,7 +92,7 @@
                 <button type="button" (click)="temp3()">Select Template</button>
                 <h2>The chronological resume format.</h2>
                 <p>The chronological resume is a traditional resume format which emphasizes your duties, experience, and work history. You'll list your most recent positions first, and go back through past jobs in reverse-chronological order from there. As the standard, basic resume format, it tends to be the easiest to read and scan.</p>
-                <a  href="" class="read-more">Choose<i class="fa fa-caret-right"></i></a>              
+                <a  type="button" (click)="generatelink('template3')" class="read-more">Choose<i class="fa fa-caret-right"></i></a>              
         </div> 
         </div>
   
@@ -106,36 +106,3 @@
 
 
 
-<!-- <div class="control-group">
-    <label class="control-label" for="choose">Backup Your CV</label>
-    <select class="control-label" placeholder="Degree" name="draft" [(ngModel)]="draftID">
-              <option value="select">select</option>
-            <option *ngFor="let i of draft">{{i.draftID}}
-            </option>
-        </select>
-        <button type="button" class="btn btn-primary" [disabled]="check.LoggedIn()" (click)="backup()">backup</button>
-<div class="sel">
-    <button type="button" class="btn btn-primary" [disabled]="!check.LoggedIn()" (click)="temp1()">Template1</button>
-<button type="button" class="btn btn-primary" [disabled]="!check.LoggedIn()" (click)="temp2()">Template2</button>
-<button type="button" class="btn btn-primary" [disabled]="!check.LoggedIn()" (click)="temp3()">Template3</button>
-</div>
-<div class="sel">
-    <button type="button" class="btn btn-primary" [disabled]="!check.LoggedIn()" (click)="generatelink()">Generate Link and send to Email</button>
-<button type="button" class="btn btn-primary" [disabled]="!check.LoggedIn()" (click)="temp2()">Template2</button>
-<button type="button" class="btn btn-primary" [disabled]="!check.LoggedIn()" (click)="temp3()">Template3</button>
-</div>
-
-<div class="row">
-    <div class="col-sm-12">
-        <ul class="list-inline rating-list" 
-            *ngFor="let star of stars" style="display: inline-block" >
-              <li (click)="countStar(star)"
-                  [ngClass]="{'selected': (star <= selectedValue)}">
-                <i class="fa fa-star"></i>
-              </li> 
-        </ul>
-    </div>
-  </div> -->
-
-
-  
