--- a/Frontend/src/app/updateform1/updateform1.component.css
+++ b/Frontend/src/app/updateform1/updateform1.component.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
   margin: 0;
@@ -23,6 +22,7 @@ body{
   box-shadow: 0 5px 10px rgba(0,0,0,0.15);
 }
 .container .title{
+  
   font-size: 25px;
   font-weight: 500;
   position: relative;
@@ -105,8 +105,10 @@ form .input-box span.details{
    margin: 35px 0
  }
  form .button input{
+   float: right;
    height: 100%;
-   width: 30%;
+   width: 20%;
+  
    border-radius: 5px;
    border: none;
    color: #fff;
@@ -115,7 +117,7 @@ form .input-box span.details{
    letter-spacing: 1px;
    cursor: pointer;
    transition: all 0.3s ease;
-   background: linear-gradient(135deg, #71b7e6, #9b59b6);
+   background: linear-gradient(135deg, #1d76b1, #c2c2c7);
  }
  form .buttons input{
     height: 100%;
@@ -131,8 +133,8 @@ form .input-box span.details{
     background: linear-gradient(135deg, #71b7e6, #9b59b6);
   }
  form .button input:hover{
-  /* transform: scale(0.99); */
-  background: linear-gradient(-135deg, #71b7e6, #9b59b6);
+  transform: scale(0.99);
+  background: linear-gradient(-135deg, #c2c2c7,#1d76b1);
   }
  @media(max-width: 584px){
  .container{
