--- a/Frontend/src/app/updateform3/updateform3.component.html
+++ b/Frontend/src/app/updateform3/updateform3.component.html
@@ -41,7 +41,8 @@
            </div>
        
           <div class="button">
-            <input type="submit" value="Next Page"> 
+            <input type="submit" value="Next Page">
+            <a routerLink="/user/updateform2"><input type="button" value="Back Page"></a>
           </div>
         
         </form>
