--- a/Frontend/src/app/userheader/userheader.component.html
+++ b/Frontend/src/app/userheader/userheader.component.html
@@ -12,7 +12,7 @@
                       </mat-icon>
                     </button>
                     <mat-menu #menu="matMenu">
-                        <button mat-menu-item>
+                        <button mat-menu-item (click)="logoutUser()">
                             <mat-icon>exit_to_app</mat-icon>
                             Logout
                             </button>
